--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ sitemap:
 	html5up.net | @ajlkn
   Jekyll integration by somiibo.com
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+  -->
+<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 <html>
 	<head>
     {% include head.html %}
